Fix docker image name

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install: make setup
 
 before_script:
     - export VERSION=${TRAVIS_TAG:-$TRAVIS_BRANCH}
-    - export DOCKER_IMAGE=deshboard/$(go list . | cut -d '/' -f 3)
+    - export DOCKER_IMAGE=${TRAVIS_REPO_SLUG}
 
 script:
     - make ARGS="-tags=integration" check
