--- a/glide.yaml
+++ b/glide.yaml
@@ -24,3 +24,4 @@ import:
   version: ^1.0.0
 - package: github.com/evalphobia/logrus_fluent
   version: ~0.1.0
+- package: github.com/ChimeraCoder/anaconda
