--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ DEBUG=false
 FLUENTD_ENABLED=false
 FLUENTD_HOST=localhost
 FLUENTD_PORT=24224
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+TWITTER_ACCESS_KEY=
+TWITTER_ACCESS_SECRET=
