--- a/glide.yaml
+++ b/glide.yaml
@@ -25,3 +25,5 @@ import:
 - package: github.com/evalphobia/logrus_fluent
   version: ~0.1.0
 - package: github.com/ChimeraCoder/anaconda
+- package: github.com/dnsimple/dnsimple-go
+  version: ~0.14.0
