--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
         TWITTER_CONSUMER_SECRET: secret
         TWITTER_ACCESS_KEY: key
         TWITTER_ACCESS_SECRET: secret
+        DNSIMPLE_TOKEN: key
 
 branches:
     except:
