--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ env:
         TWITTER_CONSUMER_SECRET: secret
         TWITTER_ACCESS_KEY: key
         TWITTER_ACCESS_SECRET: secret
+        WHOISXML_USER: user
+        WHOISXML_PASSWORD: pass
 
 branches:
     except:
