--- a/.travis.yml
+++ b/.travis.yml
@@ -25,19 +25,20 @@ branches:
 
 before_install:
     - mkdir -p $HOME/bin
-    - curl -sL http://get.binhq.io/githubin | DEST=$HOME/bin bash
-    - githubin get Masterminds/glide 0.12.3 -o $HOME/bin
+    - curl -sL http://get.binhq.io/gitbin | DEST=$HOME/bin bash
+    - gitbin get Masterminds/glide 0.12.3 -o $HOME/bin
     - make envcheck
 
 install: make setup
 
 before_script:
     - export VERSION=${TRAVIS_TAG:-$TRAVIS_BRANCH}
-    - export DOCKER_IMAGE=${TRAVIS_REPO_SLUG}
+    - export $(make varexport-DOCKER_IMAGE)
 
 script:
-    - make ARGS="-tags=integration" check
-    - if [[ $TRAVIS_EVENT_TYPE = push ]]; then make IMAGE=$DOCKER_IMAGE VERSION=$VERSION docker; fi
+    - make ARGS="-tags='acceptance integration' -v" check
+    - if [[ $TRAVIS_TAG = "$VERSION" ]]; then export DOCKER_LATEST=true; fi
+    - make docker
 
 deploy:
     provider: script
